@@ -2,6 +2,7 @@ Cacti CHANGELOG
 
 1.1.30
 -issue#1155: Non-secure mail setting not functional due to changes in phpmailer
+-issue#1157: Fix issue with tree branch code erroring when editing report
 
 1.1.29
 -issue#871: Allow Nth Percentile and Bandwidth Summation to respect 'Base Value' in template
